--- a/config.json
+++ b/config.json
@@ -1,8 +1,11 @@
 {
-    "server":"127.0.0.1",
+    "server":"0.0.0.0",
     "server_port":8388,
     "local_port":1080,
-    "password":"barfoo!",
-    "method": "aes-128-cfb-auth",
-    "timeout":600
+    "password":"asdf",
+    "method": "aes-128-cfb",
+    "timeout":600,
+    "proxy":true,
+    "proxy_server":"192.168.123.62",
+    "proxy_port":8388
 }
